hphp/hack/test/typecheck/needs_concrete/needs_concrete_traits_3.php.exp
ERROR: File "needs_concrete_traits_3.php", line 15, characters 27-28:
Some members in class `C2` are incompatible with those declared in type `C1` (Typing[4487])
  File "needs_concrete_traits_3.php", line 10, characters 26-27:
  Cannot declare this method as __NeedsConcrete, since it overrides a non-__NeedsConcrete method
  File "needs_concrete_traits_3.php", line 4, characters 26-27:
  Previously defined here
ERROR: File "needs_concrete_traits_3.php", line 15, characters 27-28:
Some members in class `C2` are incompatible with those declared in type `C1` (Typing[4487])
  File "needs_concrete_traits_3.php", line 12, characters 26-27:
  Cannot declare this method as __NeedsConcrete, since it overrides a non-__NeedsConcrete method
  File "needs_concrete_traits_3.php", line 5, characters 26-27:
  Previously defined here
